# layai-agent-reforge

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: concepts.md
examples/: __init__.py  cross_domain_transfer.py  hypothetical_status_agent.py  minimal_loop.py
memory-bank/: README.md  project-context.md
src/layai_reforge/: __init__.py  cli.py  observability.py  patches.py  program_io.py  session.py  transfer.py
src/layai_reforge/adapters/: __init__.py  claw.py  langgraph.py  materializer.py
src/layai_reforge/archive/: __init__.py  base.py  merge.py  postgres_store.py  sqlite_store.py
src/layai_reforge/evaluators/: __init__.py  base.py  coding.py  composite.py  math_eval.py  paper.py  registry.py  robotics.py
src/layai_reforge/gates/: __init__.py  audit.py  human.py
src/layai_reforge/loop/: __init__.py  budget.py  improvement.py  promotion.py  variants.py
src/layai_reforge/memory/: __init__.py  ledger.py
src/layai_reforge/models/: __init__.py  artifacts.py  program.py
src/layai_reforge/reforge/: __init__.py  engine.py
src/layai_reforge/sandbox/: __init__.py  redaction.py  runner.py
tests/: conftest.py  test_archive.py  test_cli.py  test_hypothetical_status_agent.py  test_improvement.py  test_patches.py  test_reforge_engine.py  test_sandbox.py
